# VC-signal

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  web.py
api/: index.py
app/: db.py
data/: preloaded.json
sample_output/: daily_digest_2026_03_25.md
src/: models.py
src/scoring/: __init__.py  thesis_scorer.py
src/sources/: __init__.py  github_trending.py  hackernews.py  launches.py  producthunt.py  reddit.py  rss_feeds.py
templates/: index.html
theses/: 3vc_default.yaml
