[tool.poetry]
name = "vc-signal-scanner"
version = "0.1.0"
description = "Thesis-driven startup signal monitor"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
jinja2 = "^3.1.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
feedparser = "^6.0.0"
beautifulsoup4 = "^4.12.0"
pyyaml = "^6.0.0"
python-dotenv = "^1.0.0"
rich = "^13.0.0"
click = "^8.1.0"
anthropic = "^0.40.0"

[tool.poetry.scripts]
app = "main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry-core"
